[package]
name = "timespec"
version = "2.0.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[lib]
name = "timespec"
path = "src/lib.rs"

[[bin]]
name = "timespec"
path = "src/main.rs"
doc = false

[[bin]]
name = "sleeptill"
doc = false

[dependencies]
chrono = "0.4"
chrono-tz = "0.8"
lazy-regex = "2"
thiserror = "1"
time = "0.1" # for compatibility with chrono

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
