[package]
name = "timespec"
version = "3.1.1"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[profile.release]
lto = true
strip = true

[lib]
name = "timespec"
path = "src/lib.rs"

[[bin]]
name = "timespec"
path = "src/main.rs"
doc = false

[[bin]]
name = "sleeptill"
doc = false

[dependencies]
chrono-tz = "0.8"
lazy-regex = "3"
thiserror = "1"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
