[package]
name = "timespec"
version = "4.0.1"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
strip = true

[lib]
name = "timespec"
path = "src/lib.rs"

[[bin]]
name = "timespec"
path = "src/main.rs"
doc = false

[[bin]]
name = "sleeptill"
doc = false

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
lazy-regex = "3"
thiserror = "2"
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }
